# sharded

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feedback.yaml  feedback.yml  issue-report.md  issue-report.yml
.github/workflows/: Code Quality.yaml  Docker.yaml
defaults/: sharded.ini
docs/: LICENSE  docusaurus.config.js  index.md  package-lock.json  package.json  sidebars.js
docs/addons/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: 3-6-2025.md
docs/css/: custom.css
docs/docs/: getting-started.md  intro.md
docs/docs/enterprise/: getting-started.md
sharded/: main.py
sharded/API/: config.py
sharded/cogs/: moderation.py  music.py
src/sharded/: main.py  services.py
src/sharded/API/: config.py
src/sharded/cogs/: moderation.py
tests/sharded/: test_config.py
