[project]
name = "shardedbot"
version = "0.0.1"
description = "Sharded is a python powered discord bot which aims to bring advanced moderation, community management features, and customization to the users."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appwrite==11.0.0",
    "discord-py[voice]>=2.5.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "typer>=0.15.2",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
"Documentation" = "https://docs.sharded.app"
"Repository" = "https://github.com/shardedinteractive/sharded"
"Issue Tracker" = "https://github.com/shardedinteractive/sharded/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sharded"]

[project.scripts]
sharded = "sharded.CLI.main:app"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
